compiler/tests/fail/stack_allocation/x86-64/bad_range_alignment.jazz
export fn f () -> reg u32 {
  reg u32 res;
  stack u64[2] a;
  stack u32[10] b;
  a[0]=0;
  b[1:2] = a[u32 0:2];
  res = b[1];
  return res;
}
